# lc-lg-agent-ls

./: .gitignore  langgraph.json  pyproject.toml
app/agents/: personal_chief.py
notebooks/第1章-AI通识与基础/: 1.1_OpenAI.ipynb
notebooks/第2章-LangChain入门/: 2.1_helloworld.ipynb  2.2_models.ipynb  2.3_messages.ipynb  2.4_prompt.ipynb  2.5_tools.ipynb  2.6_memory.ipynb  2.7_demo.ipynb
notebooks/第2章-LangChain入门/resources/: checkpoint.db-shm  checkpoint.db-wal  personal_chief.db  personal_chief.db-shm
