[project]
name = "langchain-course"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alibabacloud-oss-v2>=1.2.4",
    "dashscope>=1.25.12",
    "fastapi>=0.128.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.17",
    "langgraph-api>=0.7.60",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli>=0.4.12",
    "notebook>=7.5.2",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "tavily-python>=0.7.22",
    "uvicorn>=0.40.0",
]


[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
